--- a/front/src/Componentes/Rodape.module.css
+++ b/front/src/Componentes/Rodape.module.css
@@ -1,5 +1,5 @@
 .rodape{
-    background: var(--roxo-escuro);
+    background: var(--preto);
     color: var(--texto-claro);
     padding: 12px 20px;
     text-align: center;
