--- a/front/src/Componentes/Cabecalho.module.css
+++ b/front/src/Componentes/Cabecalho.module.css
@@ -10,12 +10,12 @@
 }
 
 .titilo{
-    color: var(--texto-claro);
+    color: var(--texto_calro);
 
 }
 
 .logo{
-    height: 100px;
+    height: 150px;
     width: auto;
     
 }
