--- a/front/src/Componentes/Cabecalho.module.css
+++ b/front/src/Componentes/Cabecalho.module.css
@@ -1,21 +1,19 @@
 .cabecalho{
-    background: var(--preto);
+ 
+    background: var(--roxo-escuro);
     width: 100vw;
     height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px 28px;
+    padding: 15px 20px;
     text-align: center;
 }
-
-.titilo{
-    color: var(--texto_calro);
-
+.titulo{
+    color: var(--texto-claro);
 }
 
 .logo{
-    height: 150px;
+    height:100px ;
     width: auto;
-    
 }
