--- a/front/src/Paginas/Login.module.css
+++ b/front/src/Paginas/Login.module.css
@@ -9,7 +9,7 @@
 }
 
 .formulario {
-    background: var(--roxo-escuro);
+    background: var(--azul-escuro);
     padding: 40px 35px;
     border-radius: 16px;
     width: 100%;
@@ -17,14 +17,14 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.18);
+    box-shadow: 0 6px 18px rgba(142, 146, 201, 0.521);
 }
 
 .titulo {
     text-align: center;
     margin-bottom: 10px;
     font-size: 1.8rem;
-    color: var(--roxo-claro);
+    color: var(--azul-claro);
     font-weight: 700;
 }
 
@@ -37,7 +37,7 @@ label {
 input {
     padding: 12px 14px;
     border-radius: 8px;
-    border: 2px solid var(--roxo-medio);
+    border: 2px solid var(--azul-medio);
     background: #ffffff;
     font-size: 1rem;
     outline: none;
@@ -45,8 +45,8 @@ input {
 }
 
 input:focus {
-    border-color: var(--roxo-escuro);
-    box-shadow: 0 0 0 3px rgba(107, 63, 160, 0.4);
+    border-color: var(--azul-escuro);
+    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.4);
 }
 
 .botao {
@@ -64,7 +64,7 @@ input:focus {
 
 .botao:hover,
 .botao:focus {
-    background: var(--roxo-claro);
+    background: var(--azul-claro);
     transform: scale(1.05);
     color:var(--texto-escuro)
 }
